--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ cryptography==35.0.0
 daphne==3.0.2
 Django==3.2.7
 django-bootstrap4==3.0.1
+django-cors-headers==3.10.0
 django-embed-video==1.4.0
 django-environ==0.7.0
 environ==1.0
